# time_analysis

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  analyze.py  app.py  pyproject.toml  requirements.txt  setup.py  time_analysis.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
example data/: 2023 Time-1.1.csv  2023 Time-1.2.csv  2023 Time-1.3.csv
src/: __init__.py  cli.py
src/analysis/: __init__.py  analyzer.py  statistics.py
src/data/: __init__.py  loader.py  processor.py
src/models/: __init__.py  activity.py  time_period.py
src/reports/: __init__.py  markdown.py
src/time_analysis/: __init__.py  analyzer.py  cli.py  constants.py  data_loader.py  processor.py  stats.py  visualizer.py
src/visualization/: __init__.py  charts.py  exporter.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_constants.py  test_data_loader.py  test_processor.py
